[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/login_register_input.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/style_account_button_hover.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/style_account_button.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/style_account_button_pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://scripts/login_register.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/font_board_card.tres" type="DynamicFont" id=6]


[node name="LoginRegister" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.054902, 0.462745, 0.752941, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -244.0
margin_right = 180.0
margin_bottom = 244.0
rect_min_size = Vector2( 360, 400 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignUpForm" type="VBoxContainer" parent="Center"]
margin_left = 5.0
margin_right = 355.0
margin_bottom = 488.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Center/SignUpForm"]
margin_right = 350.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Create an Account"
align = 1

[node name="VSplitContainer" type="VSplitContainer" parent="Center/SignUpForm"]
margin_top = 34.0
margin_right = 350.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 20 )

[node name="FirstName" parent="Center/SignUpForm" instance=ExtResource( 1 )]
margin_top = 58.0
margin_bottom = 116.0
placeholder_text = "First Name"

[node name="LastName" parent="Center/SignUpForm" instance=ExtResource( 1 )]
margin_top = 120.0
margin_bottom = 178.0
placeholder_text = "Last Name"

[node name="Email" parent="Center/SignUpForm" instance=ExtResource( 1 )]
margin_top = 182.0
margin_bottom = 240.0
placeholder_text = "Email"

[node name="Password" parent="Center/SignUpForm" instance=ExtResource( 1 )]
margin_top = 244.0
margin_bottom = 302.0
secret = true
placeholder_text = "Password"

[node name="ConfirmPassword" parent="Center/SignUpForm" instance=ExtResource( 1 )]
margin_top = 306.0
margin_bottom = 364.0
secret = true
placeholder_text = "Confirm Password"

[node name="SignUpButton" type="Button" parent="Center/SignUpForm"]
margin_top = 368.0
margin_right = 350.0
margin_bottom = 426.0
rect_min_size = Vector2( 0, 58 )
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Sign up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoToSignInButton" type="ToolButton" parent="Center/SignUpForm"]
margin_top = 430.0
margin_right = 350.0
margin_bottom = 488.0
rect_min_size = Vector2( 0, 58 )
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0.784314, 0.788235, 0.803922, 1 )
custom_colors/font_color_hover = Color( 0.921569, 0.92549, 0.941176, 1 )
custom_colors/font_color_pressed = Color( 0.921569, 0.92549, 0.941176, 1 )
text = "Already have an account? Sign in!"

[node name="SignInForm" type="VBoxContainer" parent="Center"]
visible = false
margin_left = 5.0
margin_top = 93.0
margin_right = 355.0
margin_bottom = 395.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label2" type="Label" parent="Center/SignInForm"]
margin_right = 350.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Log in to Godello"
align = 1

[node name="VSplitContainer2" type="VSplitContainer" parent="Center/SignInForm"]
margin_top = 34.0
margin_right = 350.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 20 )

[node name="SignInEmail" parent="Center/SignInForm" instance=ExtResource( 1 )]
margin_top = 58.0
margin_bottom = 116.0
placeholder_text = "Email"

[node name="SignInPassword" parent="Center/SignInForm" instance=ExtResource( 1 )]
margin_top = 120.0
margin_bottom = 178.0
secret = true
placeholder_text = "Password"

[node name="SignInButton" type="Button" parent="Center/SignInForm"]
margin_top = 182.0
margin_right = 350.0
margin_bottom = 240.0
rect_min_size = Vector2( 0, 58 )
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Log in"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoToSignUpButton" type="ToolButton" parent="Center/SignInForm"]
margin_top = 244.0
margin_right = 350.0
margin_bottom = 302.0
rect_min_size = Vector2( 0, 58 )
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0.784314, 0.788235, 0.803922, 1 )
custom_colors/font_color_hover = Color( 0.921569, 0.92549, 0.941176, 1 )
custom_colors/font_color_pressed = Color( 0.921569, 0.92549, 0.941176, 1 )
text = "Don't have an account? Create one!"
[connection signal="pressed" from="Center/SignUpForm/SignUpButton" to="." method="_on_SignUpButton_pressed"]
[connection signal="pressed" from="Center/SignUpForm/GoToSignInButton" to="." method="_on_GoToSignInButton_pressed"]
[connection signal="pressed" from="Center/SignInForm/SignInButton" to="." method="_on_SignInButton_pressed"]
[connection signal="pressed" from="Center/SignInForm/GoToSignUpButton" to="." method="_on_GoToSignUpButton_pressed"]
